// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should display combo card 1`] = `
Object {
  Symbol(dom): <body>
    <div
      class="loader-wrapper hide"
    >
      <div
        class="lds-ring"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        style="font-weight: bold; font-size: 16px;"
      >
        Processing...
      </div>
    </div>
    <legend />
    <div
      class="adyen-collapse-heading oc-panel panel-2"
      data-oc-id="panel-2"
    />
    <br />
    <legend />
    <div
      class="adyen-collapse-heading oc-panel panel-1"
      data-oc-id="panel-1"
    >
      <div
        class="collapse-heading"
      >
        <strong>
           
          <span
            class="collapse-toggle collapsed"
            data-target="#adyen-scheme-wrapper"
            data-toggle="collapse"
          >
            <button />
          </span>
        </strong>
      </div>
      <div
        class="adyen-wrapper collapse"
        id="adyen-scheme-wrapper"
      >
        <div
          class="adyen-component"
          id="adyen-card-payment"
        />
      </div>
    </div>
  </body>,
}
`;

exports[`Card should display installments 1`] = `
Object {
  Symbol(dom): <body>
    <div
      class="loader-wrapper hide"
    >
      <div
        class="lds-ring"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        style="font-weight: bold; font-size: 16px;"
      >
        Processing...
      </div>
    </div>
    <legend />
    <div
      class="adyen-collapse-heading oc-panel panel-2"
      data-oc-id="panel-2"
    />
    <br />
    <legend />
    <div
      class="adyen-collapse-heading oc-panel panel-1"
      data-oc-id="panel-1"
    >
      <div
        class="collapse-heading"
      >
        <strong>
           
          <span
            class="collapse-toggle collapsed"
            data-target="#adyen-scheme-wrapper"
            data-toggle="collapse"
          >
            <button />
          </span>
        </strong>
      </div>
      <div
        class="adyen-wrapper collapse"
        id="adyen-scheme-wrapper"
      >
        <div
          class="adyen-component"
          id="adyen-card-payment"
        />
      </div>
    </div>
  </body>,
}
`;

exports[`Card should display stored cards 1`] = `
Object {
  Symbol(dom): <body>
    <div
      class="loader-wrapper hide"
    >
      <div
        class="lds-ring"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        style="font-weight: bold; font-size: 16px;"
      >
        Processing...
      </div>
    </div>
    <legend />
    <div
      class="adyen-collapse-heading oc-panel panel-2"
      data-oc-id="panel-2"
    >
      <div
        class="collapse-heading"
      >
        <strong>
          <span
            class="collapse-toggle collapsed"
            data-target="#adyen-stored_8415785841327892-wrapper"
            data-toggle="collapse"
          >
            <button>
              Card ending with 1111
            </button>
          </span>
        </strong>
      </div>
      <div
        class="adyen-wrapper collapse"
        id="adyen-stored_8415785841327892-wrapper"
      >
        <div
          class="adyen-component"
          id="adyen-stored_8415785841327892-payment"
        />
      </div>
    </div>
    <br />
    <legend />
    <div
      class="adyen-collapse-heading oc-panel panel-1"
      data-oc-id="panel-1"
    >
      <div
        class="collapse-heading"
      >
        <strong>
           
          <span
            class="collapse-toggle collapsed"
            data-target="#adyen-scheme-wrapper"
            data-toggle="collapse"
          >
            <button />
          </span>
        </strong>
      </div>
      <div
        class="adyen-wrapper collapse"
        id="adyen-scheme-wrapper"
      >
        <div
          class="adyen-component"
          id="adyen-card-payment"
        />
      </div>
    </div>
  </body>,
}
`;
